r131 - october, 19, 2009
    * MembreForm : configure() > 'unique' error message has been set for the
      'pseudo' field by a sfPropelUniqueValidator 
    

r130 - october, 15, 2009
    * Statut.php : delete() > statut is disabled if there is no longer active
      Membre
    * Statut.php : countActiveMembres() > new method, counting only active
      members 
    * statut : templates > indexSuccess.php > we show active members who belong
      to the Statut


r129 - october, 15, 2009
    * membre : actions > executeMap > fixes issue with Google Map API key (old
      name was used)
    

r128 - october, 15, 2009
    * Fixes issue #7 : missing ALT attirbut for images


r127 - october, 15, 2009
    * membre : actions > executeMap > Google Map API key is directly given to
      the view
      

r126 - october, 15, 2009
    * membre : actions > executeMap() > associationId is given to the view
    * membre : templates > mapSuccess.php > get the API key for the current 
      association
    * association : templates > loginSuccess.php > version of piwam in welcome
      message is up to date


r125 - october, 14, 2009
    * README-FR : VirtualHost example has been updated
    * TROUBLESHOOTING-FR : has been updated to reference some possible 500 
      errors
    * THANKS : has been updated
    

r124 - october, 14, 2009
    * membre : templates > _form.php : javascript helper has been replaced by
      JavascriptBase helper, fixes bug 29
    * membre : templates > showSuccess.php : javascript helper has been replaced
      by JavascriptBase helper, fixes bug 29
    

r123 - october, 13, 2009
    * Compte.php : fetch() calls have been replaced by fetchAll(), fixes 
      issue 28
    * association : actions > mailing > smtp module is not required anymore to
      send emails through smtp servers, but openssl module is required to use
      GMail


r122 - october, 13, 2009 (Grd Scarabe)
    * Wiki page 'installerPiwam' has been updated 


r121 - october, 12, 2009